# tela

./: .env.example  Dockerfile  Dockerfile.chainlit  README.md  compose.yaml  langgraph.json  main.py  pyproject.toml  requirements.txt
.chainlit/: config.toml
long_term_storage/: raft_state.json
src/ai_companion/: settings.py
src/ai_companion/core/: exceptions.py  prompts.py  schedules.py
src/ai_companion/graph/: edges.py  graph.py  nodes.py  state.py
src/ai_companion/graph/utils/: chains.py  helpers.py
src/ai_companion/interfaces/chainlit/: app.py
src/ai_companion/interfaces/telegram/: notes.txt  telegram_response.py  webhook_endpoint.py
src/ai_companion/modules/image/: __init__.py  image_to_text.py  text_to_image.py
src/ai_companion/modules/memory/long_term/: memory_manager.py  vector_store.py
src/ai_companion/modules/schedules/: context_generation.py
src/ai_companion/modules/speech/: speech_to_text.py  text_to_speech.py
